--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/**
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/sonarlint
 *.iws
 *.iml
 *.ipr
@@ -36,3 +38,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/sonarlint
+/.idea
