--- a/order/pom.xml
+++ b/order/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -55,6 +59,11 @@
         <dependency>
             <groupId>org.abccompany</groupId>
             <artifactId>product</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.abccompany</groupId>
+            <artifactId>base</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
