--- a/order/pom.xml
+++ b/order/pom.xml
@@ -66,5 +66,9 @@
             <artifactId>base</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
