--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=products
+spring.application.name=product
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/product?createDatabaseIfNotExist=true
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-server.port=8082
+server.port=0
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
