--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>product</module>
         <module>base</module>
         <module>discoveryserver</module>
+        <module>apigateway</module>
     </modules>
     <properties>
         <java.version>21</java.version>
