--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/items/**
 spring.cloud.gateway.routes[1].id=product
 spring.cloud.gateway.routes[1].uri=lb://product
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/products/**
+
+## Actuator endpoint
+management.endpoints.web.exposure.include=prometheus
