--- a/discoveryserver/src/main/resources/application.properties
+++ b/discoveryserver/src/main/resources/application.properties
@@ -2,3 +2,6 @@ eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 server.port=8761
+
+## Actuator endpoint
+management.endpoints.web.exposure.include=prometheus
